--- a/src/Components/Post/post.css
+++ b/src/Components/Post/post.css
@@ -74,15 +74,25 @@
     border-bottom: 1px solid #EFEFEF;
 }
 
-.taggram-post .post-area .post-details .post-owner-info img {
+.taggram-post .post-area .post-details .post-owner-info img,
+.taggram-post .post-area .post-details .post-owner-info div.empty{
     /* SIZE */
     height: 32px;
+    width: 32px;
 
     /* BORDER */
     border-radius: 32px;
 
     /* SPACES */
     margin: 0 16px;
+}
+
+.taggram-post .post-area .post-details .post-owner-info div.empty {
+    /* SIZE */
+    flex-shrink: 0;
+
+    /* COLOR */
+    background-color: #DBDBDB;
 }
 
 .taggram-post .post-area .post-details .post-owner-info .info-area .name {
@@ -148,6 +158,9 @@
 
     /* DISPLAY */
     display: flex;
+
+    /* EFFECTS */
+    transition: height 2000ms;
 }
 
 .taggram-post .post-area .post-details .new-comment-area button {
@@ -169,8 +182,11 @@
 }
 
 .taggram-post .post-area .post-details .new-comment-area button:hover {
+    /* FONT */
     font-size: 16px;
     font-weight: bolder;
+
+    /* SPACES */
     padding: 0 13px;
 }
 
@@ -219,4 +235,26 @@
 
     /* BORDER */
     border-bottom: 1px solid #EFEFEF;
+}
+
+.taggram-post .post-area .post-details .new-comment-area.error {
+    /* DISPLAY */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    /* FONT */
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 18px;
+    text-align: center;
+
+    /* SPACES */
+    padding: 0 12px;
+
+    /* COLORS */
+    background-color: #2c2c2cbd;
+    color: white;
 }
